--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <![endif]-->
         
         <!--<script src="defaultParams.js" async defer></script>-->
-        <script src="spread.js" async defer></script>
+        <!--<script src="spread.js" async defer></script>-->
+        <script src="rest.js" async defer></script>
     </body>
 </html>
