last commit to this section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         
         <!--<script src="defaultParams.js" async defer></script>-->
         <!--<script src="spread.js" async defer></script>-->
-        <script src="rest.js" async defer></script>
+        <!-- <script src="rest.js" async defer></script> -->
+        <script src="destructuring.js" async defer></script>
     </body>
 </html>
